--- a/app/assets/stylesheets/base/elements/timeline/timeline-header.scss
+++ b/app/assets/stylesheets/base/elements/timeline/timeline-header.scss
@@ -1,6 +1,6 @@
 .timeline-header {
   @extend h1;
-  margin-left: 2.5rem;
+  margin-left: 0.5rem;
   font-size: 1.5rem;
   font-style: italic;
   color: lighten($color-fg, 10);
